--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,1 @@
-Requirement already satisfied: arrow in /Users/hugo/opt/anaconda3/lib/python3.9/site-packages (1.2.2)
-Requirement already satisfied: python-dateutil>=2.7.0 in /Users/hugo/opt/anaconda3/lib/python3.9/site-packages (from arrow) (2.8.2)
-Requirement already satisfied: six>=1.5 in /Users/hugo/opt/anaconda3/lib/python3.9/site-packages (from python-dateutil>=2.7.0->arrow) (1.16.0)
+arrow
